<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.astar.stopprefect.SettingsActivity">

<RelativeLayout
    android:paddingTop="18dp"
    android:paddingBottom="18dp"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleSettingsText"
        android:text="@string/settings_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/horizontalText"
        android:layout_marginTop="8dp"
        android:text="@string/horizontal_photo"
        android:layout_below="@id/titleSettingsText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/xPosText"
        android:text="@string/x_pos_rus"
        android:layout_marginTop="8dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/horizontalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/yPosText"
        android:text="@string/y_pos_rus"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/horizontalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/cordinatesLayout"
        android:layout_below="@id/xPosText"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/xPosEdit"
            android:layout_width="wrap_content"
            android:background="@drawable/edit_text_style"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:maxLength="4"
            android:padding="8dp"
            android:gravity="center"
            android:text="1800"
            android:inputType="number"
            android:layout_weight="1"
            android:hint="@string/x_position" />

        <EditText
            android:id="@+id/yPosEdit"
            android:background="@drawable/edit_text_style"
            android:layout_weight="1"
            android:padding="8dp"
            android:maxLength="4"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/y_position"
            android:text="1600"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/verticalText"
        android:layout_below="@+id/cordinatesLayout"
        android:layout_marginTop="8dp"
        android:text="@string/vertical_photo"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/cordinatesVerticalLayout"
        android:layout_below="@id/verticalText"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/xPosVerticalEdit"
            android:layout_width="wrap_content"
            android:background="@drawable/edit_text_style"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:maxLength="4"
            android:padding="8dp"
            android:gravity="center"
            android:text="1600"
            android:inputType="number"
            android:layout_weight="1"
            android:hint="@string/x_position" />

        <EditText
            android:id="@+id/yPosVerticalEdit"
            android:background="@drawable/edit_text_style"
            android:layout_weight="1"
            android:padding="8dp"
            android:maxLength="4"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/y_position"
            android:text="1800"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/fontSizeText"
        android:layout_alignBaseline="@+id/fontSizeEdit"
        android:text="@string/font_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/fontSizeEdit"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_style"
        android:layout_alignParentRight="true"
        android:layout_below="@id/cordinatesVerticalLayout"
        android:gravity="center"
        android:hint="@string/font_size_hint"
        android:text="145"
        android:padding="8dp"
        android:maxLength="3"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/font_type_text"
        android:layout_alignBaseline="@+id/fontTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/fontTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fontSizeEdit"
        android:layout_marginTop="8dp"
        android:layout_alignParentRight="true"
        android:padding="8dp"
        android:background="@drawable/edit_text_style"
        android:entries="@array/font_type_array">
    </Spinner>

    <TextView
        android:id="@+id/colorTextText"
        android:text="@string/color_text"
        android:layout_alignBaseline="@+id/colorTextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/colorTextEdit"
        android:layout_below="@+id/fontTypeSpinner"
        android:layout_marginTop="8dp"
        android:layout_alignParentRight="true"
        android:layout_width="30dp"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/colorCodeText"
        android:text="@string/colorCode"
        android:layout_below="@+id/colorTextEdit"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <TextView
        android:id="@+id/titleOtherText"
        android:layout_marginTop="8dp"
        android:layout_below="@id/colorCodeText"
        android:text="@string/other_parametors"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/qualityText"
        android:text="@string/quality_text"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/titleOtherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/qualityEdit"
        android:layout_below="@id/qualityText"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
</ScrollView>