<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.astar.stopprefect.MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="18dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="18dp">

        <ImageView
            android:id="@+id/previewImage"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/photo_image" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/previewImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/save" />

        <ImageButton
            android:id="@+id/previousButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/previewImage"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/left_arrow"
            android:text="@string/preview" />

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/previewImage"
            android:layout_marginTop="16dp"
            android:src="@drawable/right_arrow"
            android:text="@string/next" />

        <ImageButton
            android:id="@+id/decrementButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/nextButton"
            android:layout_marginTop="8dp"
            android:src="@drawable/minus" />

        <ImageButton
            android:id="@+id/incrementButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/nextButton"
            android:layout_marginTop="8dp"
            android:src="@drawable/plus" />

        <Button
            android:id="@+id/dateTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/saveButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/set_date" />

        <CheckBox
            android:id="@+id/verticalPhotoCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateTimeButton"
            android:layout_marginTop="8dp"
            android:text="@string/vertical_photo" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/verticalPhotoCheckbox"
            android:layout_marginTop="16dp"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/statusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dateText"
            android:layout_marginTop="8dp"
            android:text="@string/status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>
</ScrollView>